--- a/app/assets/stylesheets/pages/_show-users.scss
+++ b/app/assets/stylesheets/pages/_show-users.scss
@@ -37,7 +37,6 @@
   width: 100%;
   // word-wrap: break-word;
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 10px;
 }
 
